# shuttle_rs-launchpad-no_1-web_project

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: gh-actions.yml  rust.yml  spellcheck.yml
src/: main.rs
