[package]
name = "probable-octo-lamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = { version = "1.35.1", features = ["full"] }
